# gtkmm_demo

./: CMakeLists.txt  demo_resources.c  resource_gen.sh
